# python-interview-tours-codex

./: .gitignore  README.md  pyproject.toml
app/: errors.py  main.py  models.py  schemas.py  service.py  storage.py
tests/: test_tours.py
tour_scheduling_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
